<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_tickets"
        android:icon="@drawable/ic_tickets"
        android:title="@string/air_tickets" />
    <item
        android:id="@+id/nav_hotels"
        android:icon="@drawable/ic_hotels"
        android:title="@string/hotels" />
    <item
        android:id="@+id/nav_koroche"
        android:icon="@drawable/ic_koroche"
        android:title="@string/in_short" />
    <item
        android:id="@+id/nav_subscriptions"
        android:icon="@drawable/ic_subscriptions"
        android:title="@string/subscriptions" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>