<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:paddingTop="45dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_round_square_grey3"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="13dp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="16dp"
            android:paddingEnd="16dp">

            <EditText
                android:id="@+id/input_city_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:background="#00000000"
                android:drawableEnd="@drawable/ic_swap"
                android:drawablePadding="8dp"
                android:text="@string/minsk"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                app:dividerColor="#3E3F43" />

            <EditText
                android:id="@+id/input_city_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:background="#00000000"
                android:drawableEnd="@drawable/ic_clear_icon"
                android:drawablePadding="8dp"
                android:hint="@string/Where_to_Turkey"
                android:textColor="@color/white"
                android:textColorHint="#9F9F9F"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="18dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingVertical="2dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/back_reels_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_large_round_square_grey3"
                android:drawablePadding="8dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_plus" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_large_round_square_grey3"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp">


                <TextView
                    android:id="@+id/day_of_month_and_month_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_placeholder1"
                    android:textColor="@color/white"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/day_of_week_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_placeholder2"
                    android:textColor="@color/grey5"
                    android:textStyle="italic" />
            </LinearLayout>

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_large_round_square_grey3"
                android:drawablePadding="8dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/passenger_placeholder"
                android:textColor="@color/white"
                android:textStyle="italic"
                app:drawableStartCompat="@drawable/ic_profile" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_large_round_square_grey3"
                android:drawableStart="@drawable/ic_filters"
                android:drawablePadding="8dp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="8dp"
                android:text="@string/filters"
                android:textColor="@color/white"
                android:textStyle="italic" />

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp" />


        </LinearLayout>

    </HorizontalScrollView>

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_round_square_grey1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward_reels"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_tickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="11dp"
            android:text="@string/show_all"
            android:textColor="@color/blue"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="23dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/show_all_tickets_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_round_square_blue"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/show_all_tickets"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_round_square_grey2"
        android:orientation="horizontal"
        android:paddingVertical="14dp"
        android:paddingStart="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/price_subscription"
            android:src="@drawable/ic_subscriptions"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/price_subscription"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:thumbTint="@color/white"
            android:trackTint="@color/grey6" />

    </LinearLayout>
</LinearLayout>